--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ p {
         // RUNTIMESTARTEND
     </script>
 	<div id="words" align="center">
-    <p>test</p>
+    <p>Generated Words:</p>
 	</div>
 </body>
 </html>
